--- a/template/login.html
+++ b/template/login.html
@@ -16,7 +16,7 @@
                 <header style="color: white;">Login</header>
         </div>
             <div class="input-box">
-                <input type="text" class="input-field" placeholder="Matric Number" autocomplete="off" required>
+                <input type="text" class="input-field" placeholder="PF Number" autocomplete="off" required>
         </div>
         <div class="input-box">
             <input type="password" class="input-field" placeholder="Password" autocomplete="off" required>
