--- a/template/hoddashboard.html
+++ b/template/hoddashboard.html
@@ -23,26 +23,26 @@
         <ul class="nav flex-column mt-4 h-100">
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="hoddashboard.html">
-                    <img src="images/dashboard.png" alt="dashboard" style="width: 25px" />
+                    <img src="images/dashboard.png" alt="dashboard" style="width: 25px; padding-top: 20px;" />
                     <p>Dashboard</p>
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="courses.html">
-                    <img src="images/courses.png" alt="dashboard" style="width: 25px" />
+                    <img src="images/courses.png" alt="dashboard" style="width: 25px; padding-top: 20px;" />
                     <p>Courses</p>
                 </a>
             </li>
 
             <li class="nav-item">
                 <a href="lecturer.html" class="nav-link"><img src="images/classes.png" alt="profile"
-                        style="width: 25px" />
+                        style="width: 25px; padding-top: 20px;" />
                     <p>Lecturers</p>
 
                 </a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link"><img src="images/report.png" alt="report" style="width: 25px" />
+                <a href="#" class="nav-link"><img src="images/report.png" alt="report" style="width: 25px; padding-top: 20px;" />
                     <p>Sign out</p>
                 </a>
             </li>
@@ -50,17 +50,24 @@
         </ul>
     </aside>
 
+    <main class="p-md-4 pt-0 w-100">
+        <div class="p-3 pt-md-0 d-flex justify-content-between align-items-center pb-2 border-bottom">
+          <h4 class="">Welcome back, HOD</h4>
+          <i class="bi bi-list d-block d-md-none" id="menuBtn" style="font-size: 40px"></i>
+        </div>
+  
+
     <div class="container">
         
-        <div class="container" style="width: 100%; margin-top: 40px;">
+        <div class="container" style="width: 100%; margin-top: 250px;">
          <div class="row">
              <div class="col-sm-12">
                  <div class="row">
                      
                      <div class="col-sm-6">
                          <div class="input-box" style="float: right;"></div>
-                         <h2 style="font-size: 20px; margin-top: 20px; margin-left: 400px;">
-                             <input type="Search" placeholder="Search...">
+                         <h2 style="font-size: 20px; margin-top: 20px; margin-right: 400px;">
+                             <input type="Search" placeholder="Search..." style="width: 500%; border-radius: 10px;">
                              <i class='bx bxs-lock-alt' style="size: 10px;"></i>
                          </h2>
                      </div>
