--- a/template/teacherdashboard.html
+++ b/template/teacherdashboard.html
@@ -26,7 +26,7 @@
       <ul class="nav flex-column mt-4 h-100">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="teacherdashboard.html">
-            <img src="images/dashboard.png"  alt="dashboard" style="width: 25px"   />
+            <img src="images/dashboard.png"  alt="dashboard" style="width: 25px; padding-top: 20px;"   />
             <p>Dashboard</p>
           </a>
         </li>
@@ -36,20 +36,20 @@
             <img
               src="images/attendance.png"
               alt="attendance"
-              style="width: 25px"
+              style="width: 25px; padding-top: 20px;"
             />
             <p>Attendance</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="students.html" class="nav-link"
-            ><img src="images/classes.png" alt="profile" style="width: 25px" />
+            ><img src="images/classes.png" alt="profile" style="width: 25px; padding-top: 20px;" />
             <p>Students</p>
           </a>
         </li>
         <li class="nav-item">
           <a href="#" class="nav-link"
-            ><img src="images/report.png" alt="report" style="width: 25px" />
+            ><img src="images/report.png" alt="report" style="width: 25px; padding-top: 20px;"/>
             <p>Sign out</p>
           </a>
         </li>
