--- a/template/styles/dashboard.css
+++ b/template/styles/dashboard.css
@@ -3,6 +3,17 @@ body {
   background: #ecf0f1;
   color: #34495e;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
 
 .table-custom-success {
   --bs-table-color: white;
